@@ -23,7 +23,8 @@ HEADERS    = mainwindow.h preferencesdlg.h uservideowidget.h \
              utilsound.h utilvideo.h utiltts.h utilui.h utilhotkey.h \
              serverlogeventsmodel.h mytreeview.h textmessagecontainer.h \
              useraccountsmodel.h encryptionsetupdlg.h utiltt.h utilxml.h \
-             utilos.h serverdlg.h moveusersdlg.h useraccountdlg.h soundeventsmodel.h
+             utilos.h serverdlg.h moveusersdlg.h useraccountdlg.h soundeventsmodel.h \
+             mytableview.h
 
 SOURCES    = main.cpp mainwindow.cpp preferencesdlg.cpp uservideowidget.cpp \
              channelstree.cpp channeldlg.cpp userinfodlg.cpp \
@@ -43,7 +44,8 @@ SOURCES    = main.cpp mainwindow.cpp preferencesdlg.cpp uservideowidget.cpp \
              utilsound.cpp utilvideo.cpp utiltts.cpp utilui.cpp utilhotkey.cpp \
              serverlogeventsmodel.cpp mytreeview.cpp textmessagecontainer.cpp \
              useraccountsmodel.cpp encryptionsetupdlg.cpp utiltt.cpp utilxml.cpp \
-             utilos.cpp serverdlg.cpp moveusersdlg.cpp useraccountdlg.cpp soundeventsmodel.cpp
+             utilos.cpp serverdlg.cpp moveusersdlg.cpp useraccountdlg.cpp soundeventsmodel.cpp \
+             mytableview.cpp
 
 FORMS      = mainwindow.ui channel.ui preferences.ui \
              serverlist.ui userinfo.ui bannedusers.ui useraccounts.ui \
