@@ -36,13 +36,13 @@ StatusBarDlg::StatusBarDlg(QWidget* parent, StatusBarEvents events)
     restoreGeometry(ttSettings->value(SETTINGS_DISPLAY_STATUSBARDLG_SIZE).toByteArray());
 
     m_statusbarmodel = new StatusBarEventsModel(this);
-    ui.statusBarTreeView->setModel(m_statusbarmodel);
+    ui.statusBarTableView->setModel(m_statusbarmodel);
     m_statusbarmodel->setStatusBarEvents(m_events);
 
-    ui.statusBarTreeView->header()->restoreState(ttSettings->value(SETTINGS_DISPLAY_STATUSBAR_EVENTS_HEADER).toByteArray());
+    ui.statusBarTableView->horizontalHeader()->restoreState(ttSettings->value(SETTINGS_DISPLAY_STATUSBAR_EVENTS_HEADER).toByteArray());
 
-    connect(ui.statusBarTreeView, &QAbstractItemView::doubleClicked, this, &StatusBarDlg::slotStatusBarEventToggled);
-    connect(ui.statusBarTreeView->selectionModel(), &QItemSelectionModel::currentChanged,
+    connect(ui.statusBarTableView, &QAbstractItemView::doubleClicked, this, &StatusBarDlg::slotStatusBarEventToggled);
+    connect(ui.statusBarTableView->selectionModel(), &QItemSelectionModel::currentChanged,
             this, &StatusBarDlg::statusBarEventSelected);
     m_SBVarMenu = new QMenu(this);
     connect(ui.SBVarButton, &QPushButton::clicked, this, [this]()
@@ -174,7 +174,7 @@ void StatusBarDlg::slotStatusBarRevert(bool /*checked*/)
 void StatusBarDlg::slotAccept()
 {
     ttSettings->setValue(SETTINGS_STATUSBAR_ACTIVEEVENTS, m_statusbarmodel->getStatusBarEvents());
-    ttSettings->setValue(SETTINGS_DISPLAY_STATUSBAR_EVENTS_HEADER, ui.statusBarTreeView->header()->saveState());
+    ttSettings->setValue(SETTINGS_DISPLAY_STATUSBAR_EVENTS_HEADER, ui.statusBarTableView->horizontalHeader()->saveState());
     ttSettings->setValue(SETTINGS_DISPLAY_STATUSBARDLG_SIZE, saveGeometry());
     saveCurrentMessage();
 }
